--- a/src/main/resources/templates/customerList.html
+++ b/src/main/resources/templates/customerList.html
@@ -20,6 +20,21 @@
     {{/.}}
     {{/customerList}}
 </ul>
+<h2>
+    Please complete form to create a BankAccount:<br>
+
+    First name:<br>
+    <input type="text" name="firstname"><br>
+    Last name:<br>
+    <input type="text" name="lastname"><br>
+    <button type="submit">SUBMIT</button>
+
+
+</h2>
+
+
+
+
 
 
 {{^name}}
