--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,6 +4,9 @@
     </head>
 <body>
 
+
+<P><{{myErrorMessage}}</P>
+
     <div class="welcomebanner">
         {{#name}}
         <h1>Hello, {{.}}!</h1>
